--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "url": "git+https://github.com/h124551753/react-native-imlink.git"
   },
   "author": "hhe",
-  "license": "ISC",
+  "license": "MIT",
   "bugs": {
     "url": "https://github.com/h124551753/react-native-imlink/issues"
   },
